UC-389 - Add design to users drop down add to core - fix z-index

--- a/src/uIntra.Core/App_Plugins/Core/Content/styles/Core.css
+++ b/src/uIntra.Core/App_Plugins/Core/Content/styles/Core.css
@@ -543,6 +543,7 @@ body{
 
 /*select2*/
 .select2-container {
+    z-index: 9;
 	max-width:100%;
 	box-sizing: border-box;
 	display: inline-block;
